# profecia

./: .gitignore  README.md  exports_example.txt  pyproject.toml  requirements.txt
config/: data.toml  train.toml
notebooks/: data.ipynb  eda2.ipynb  evaluation.ipynb  evaluation2.ipynb  masks.ipynb  split.ipynb  train.ipynb  workflow_step_by_step.ipynb
scripts/: create_lagged_variables.py  run_parallel_shap.py  run_workflow_and_train.py  workflow_step_by_step_configurable.py
src/: project_config.py
src/data/: eda.py  io.py  preprocess.py
src/evaluation/: regression.py  visualization.py
src/explainability/: __init__.py  shap.py
src/models/: tabular_models.py
src/split/: export_tabular.py  spatial.py
src/training/: dataset.py  hyperparam_search.py  split.py  train.py
src/workflow/: __init__.py  pipeline.py
