[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "profecia"
version = "0.1.0"
description = "Modelado LAI-clima"
authors = [
    {name = "garciad"}
]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "xarray",
    "netcdf4",
    "h5netcdf",
    "dask",
    "matplotlib",
    "scipy",
    "statsmodels",
    "scikit-learn==1.8.0",
    "jupyter",
    "notebook",
    "ipykernel",
    "mlflow",
    "shap",
    "seaborn"
    ]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]